# python-project-50

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
draft/: Project2_tmpl 3.py  Project2_tmpl.py  file11.json  file22.json  gen_diff.py
gendiff/: __init__.py  build_diff.py  build_tree.py  cli.py  diff_nested_dicts.py  formatting.py  generate_diff.py  parse_file.py  read_file.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/parse_scripts/: parse_file.py
gendiff/scripts/: gendiff.py
tests/: generate_diff_old  test_gendiff.py  test_generate_diff.py
tests/test_data/: test_json.txt  test_json_7.txt  test_json_9.txt  test_yaml.txt  test_yaml_7.txt
