[project]
name = "hexlet-code"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.2",
  ]
  
packages = [
  { include = "gendiff" },
  ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "pytest-cov>=6.0.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"